k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: demo-deployment
  namespace: jenkins

spec:
  replicas: 1

  selector:
    matchLabels:
      app: demo

  template:
    metadata:
      labels:
        app: demo

    spec:
      containers:
        - name: demo-container
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
