k8s/deploymoent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: jenkins

spec:
  replicas: 2

  selector:
    matchLabels:
      app: webapp

  template:
    metadata:
      labels:
        app: webapp

    spec:
      containers:
      - name: webapp-container
        image: IMAGE_PLACEHOLDER
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: jenkins

spec:
  selector:
    app: webapp

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: NodePort
