k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-service
  namespace: jenkins

spec:
  selector:
    app: demo

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  type: NodePort
