k8s/ingess.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jenkins-ingress
  namespace: java

spec:
  ingressClassName: nginx

  rules:
  - host: java.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-service
            port:
              number: 80

  - host: app.local
    http:
      paths:
      pathtype: Prefix
      backend:
          service:
            name: webapp-service
            port:
              number: 80
